--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "@stripe/stripe-js": "^6.0.0",
     "axios": "^1.8.3",
+    "dotenv": "^16.4.7",
     "ethers": "^6.13.5",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.479.0",
     "react": "^19.0.0",
     "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
+    "react-feather": "^2.0.10",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.1",
