--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "start": "node backend/server.js",
     "dev": "nodemon backend/server.js",
-    "build": "npm install && npm install --prefix client && npm run build --prefix client"
+    "build": "npm install && npm install --prefix client && npm run build --prefix client",
+    "migrate": "truffle migrate --config truffle-config.cjs --reset --network ganache",
+    "compile": "truffle compile --config truffle-config.cjs --all",
+    "test": "truffle console --config truffle-config.cjs --network ganache"
   },
   "author": "",
   "license": "ISC",
@@ -21,8 +24,7 @@
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
-    "nodemailer": "^6.10.0",
-    "web3": "^4.16.0"
+    "nodemailer": "^6.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
