--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
-    "nodemailer": "^6.10.0"
+    "nodemailer": "^6.10.0",
+    "tessaract": "^1.0.0",
+    "tesseract.js": "^6.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
